@@ -1,3 +1,15 @@
+2012-12-12  Patrick Gansterer  <paroga@webkit.org>
+
+        [WIN] Implement WebCore::fileSystemRepresentation() for !USE(CF)
+        https://bugs.webkit.org/show_bug.cgi?id=104456
+
+        Reviewed by Brent Fulgham.
+
+        Convert the UTF-16 path to the system default Windows ANSI code page (usually Windows Latin1).
+
+        * platform/win/FileSystemWin.cpp:
+        (WebCore::fileSystemRepresentation):
+
 2012-12-12  No'am Rosenthal  <noam@webkit.org>
 
         [Texmap] Remove lowp/highp indicators as they're not needed with ANGLE.
